-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.9.0 FF
-
None
-
Debian testing, qtbase + qtwayland self-compiled from git dev branches
-
-
ef72e9696 (dev), 5178606a9 (dev), 88ceef9e1 (dev)
On Linux and Windows, Qt does not just set the window name explicitly set using e.g. `QWidget::setWindowName` for the actual window shown on screen, but appends the application name (see QPlatformWindow::setWindowTitle).
As a consequence, a window e.g. has the title "MyApp" if that was set at the app name, and no window title was explicitly set.
That logic is currently not applied on the accessibility layer, though, which is inconsistent and has the effect that e.g. screen reader users lack information that's available to sighted users.
(Besides that, it also breaks logic that e.g. Accerciser currently has to match window information retrieved via AT-SPI2 with that retrieved from the window manager.)
Steps to reproduce:
1) Compile and run the attached sample program on Linux (either X11 or Wayland)
2) Notice that "MyApp" is shown as window title
3) start Accerciser and navigate to the top-level frame underneath the application object of the sample app
Actual result:
The frame is shown without any name in Accerciser (s. attached screenshot)
Expected result:
The accessible name should match what is displayed on screen, i.e. should be "MyApp".
| For Gerrit Dashboard: QTBUG-127563 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 579121,5 | a11y: Report the actual (platform) window name as a11y name (xcb) | dev | qt/qtbase | Status: MERGED | +2 | +1 |
| 579122,3 | Mark QWaylandWindow::windowTitle as overriding base class impl | dev | qt/qtwayland | Status: MERGED | +2 | 0 |
| 579125,2 | a11y: Report actual platform window name on Windows | dev | qt/qtbase | Status: MERGED | +2 | 0 |