src/widgets/accessible/qaccessiblewidget.cpp
@@ -30,6 +30,8 @@
 #endif
 #include <QtWidgets/private/qwidget_p.h>
 
+#include <qpa/qplatformwindow.h>
+
 QT_BEGIN_NAMESPACE
 
 using namespace Qt::StringLiterals;
@@ -353,9 +355,6 @@ int QAccessibleWidget::indexOfChild(const QAccessibleInterface *child) const
     return cl.indexOf(qobject_cast<QWidget *>(child->object()));
 }
 
-// from qwidget.cpp
-extern QString qt_setWindowTitle_helperHelper(const QString &, const QWidget*);
-
 /*! \reimp */
 QString QAccessibleWidget::text(QAccessible::Text t) const
 {
@@ -368,10 +367,10 @@ QString QAccessibleWidget::text(QAccessible::Text t) const
         } else if (!widget()->accessibleName().isEmpty()) {
             str = widget()->accessibleName();
         } else if (widget()->isWindow()) {
-            if (widget()->isMinimized())
-                str = qt_setWindowTitle_helperHelper(widget()->windowIconText(), widget());
-            else
-                str = qt_setWindowTitle_helperHelper(widget()->windowTitle(), widget());
+            if (QWindow *window = widget()->windowHandle()) {
+                if (QPlatformWindow *platformWindow = window->handle())
+                    str = platformWindow->windowTitle();
+            }
         } else {
             str = qt_accStripAmp(buddyString(widget()));
         }
